2010-04-22  Ingo Renner  <ingo@typo3.org>

	* Added support for the Like Button Social Plugin
	* Fixed the style parameter in the Like Button View, the width settings was ignored