@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext "socialplugins".
 #
-# Auto generated 22-04-2010 02:33
+# Auto generated 22-04-2010 02:48
 #
 # Manual updates:
 # Only the data in the array - everything else is removed by next
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'modify_tables' => '',
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
-	'version' => '0.1.1',
+	'version' => '0.1.2',
 	'constraints' => array(
 		'depends' => array(
 			'php' => '5.2.0-0.0.0',
@@ -42,7 +42,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:10:{s:9:"ChangeLog";s:4:"5a82";s:16:"ext_autoload.php";s:4:"f5bb";s:12:"ext_icon.gif";s:4:"6885";s:17:"ext_localconf.php";s:4:"816f";s:14:"ext_tables.php";s:4:"5b7a";s:43:"Classes/Controller/LikeButtonController.php";s:4:"96cf";s:37:"Classes/View/LikeButton/IndexHtml.php";s:4:"6fd6";s:47:"Configuration/FlexForms/flexform_likebutton.xml";s:4:"bb1d";s:38:"Configuration/TypoScript/constants.txt";s:4:"d41d";s:34:"Configuration/TypoScript/setup.txt";s:4:"cc06";}',
+	'_md5_values_when_last_written' => 'a:10:{s:9:"ChangeLog";s:4:"8054";s:16:"ext_autoload.php";s:4:"f5bb";s:12:"ext_icon.gif";s:4:"6885";s:17:"ext_localconf.php";s:4:"816f";s:14:"ext_tables.php";s:4:"5b7a";s:43:"Classes/Controller/LikeButtonController.php";s:4:"0276";s:37:"Classes/View/LikeButton/IndexHtml.php";s:4:"129f";s:47:"Configuration/FlexForms/flexform_likebutton.xml";s:4:"bb1d";s:38:"Configuration/TypoScript/constants.txt";s:4:"d41d";s:34:"Configuration/TypoScript/setup.txt";s:4:"cc06";}',
 	'suggests' => array(
 	),
 );
